# rsyncinator-desktop

./: .gitignore  README.md  package-lock.json  package.json  rollup.config.js  tailwind.config.js
public/: global.css  index.html
src/: App.svelte  helpers.js  stores.js  temp.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/Components/: Checkbox.svelte  GroupedButton.svelte  Hr.svelte  InputPath.svelte  Preview.svelte  TextField.svelte  TextFieldWithDropdown.svelte
