[package]
name = "rsyncinator-desktop"
version = "0.2.0"
description = "Visually create rsync commands"
authors = ["mitch stanley"]
license = ""
repository = ""
default-run = "rsyncinator-desktop"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.3", features = [
  "dialog-all",
  "notification-all",
  "shell-all",
] }
clipboard = "0.5.0"
# tauri = { git = "https://github.com/tauri-apps/tauri", features = [
#   "notification-all",
# ] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
